--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies if needed (e.g. for some ML libraries)
+# Install system dependencies if needed 
 RUN apt-get update && apt-get install -y gcc
 
 # Copy requirements and install
